Fix wrapping with multiple tags, embiggen tags, pretty icons

--- a/src-ui/src/app/components/common/input/tags/tags.component.scss
+++ b/src-ui/src/app/components/common/input/tags/tags.component.scss
@@ -2,3 +2,11 @@
   min-width: 1em;
   min-height: 1em;
 }
+
+.tag-wrap {
+  font-size: 1rem;
+}
+
+.tag-wrap-delete {
+  cursor: pointer;
+}
